@@ -3,6 +3,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.4
 
+	- The scheduler now validates device URIs when adding
+	  printers.
 	- Updated httpSeparateURI() to support hostnames with
 	  the backslash character.
 	- Updated the Japanese localization (STR #2546)
